2004-01-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/nr-arena-group.h, src/display/nr-arena-group.cpp
	(nr_arena_group_set_child_transform):
	Indicate that matrix isn't written to.

	* src/sp-item-transform.cpp (sp_item_rotate_rel, sp_item_scale_rel,
	sp_item_skew_rel),
	src/sp-marker.cpp (sp_marker_update, sp_marker_show_instance),
	src/sp-shape.cpp (sp_shape_bbox),
	src/sp-symbol.cpp (sp_symbol_update, sp_symbol_show, sp_symbol_print),
	src/display/nr-arena-shape.cpp (nr_arena_shape_update, nr_arena_shape_pick):
	Remove uses of nr_matrix_f_from_d.
	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp (nr_matrix_f_from_d),
	src/libnr/libnr.def:
	Remove now-unused nr_matrix_f_from_d.

	* src/nodepath.cpp (sp_nodepath_new),
	src/path-chemistry.cpp (sp_selected_path_combine, sp_selected_path_break_apart),
	src/selection-chemistry.cpp (sp_selection_apply_affine),
	src/selection.cpp (sp_selection_bbox_document),
	src/sp-item.cpp (sp_item_bbox_desktop, sp_item_private_snappoints),
	src/sp-pattern.cpp (sp_pattern_painter_new),
	src/modules/gnome.cpp (sp_module_print_gnome_fill),
	src/widgets/icon.cpp (sp_icon_image_load_svg):
	Remove uses of nr_matrix_d_from_f.
	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp (nr_matrix_d_from_f),
	src/libnr/libnr.def:
	Remove now-unused nr_matrix_d_from_f.

	* src/sp-item.h, src/sp-item.cpp (sp_item_set_i2d_affine_d,
	sp_item_i2doc_affine_d, sp_item_i2d_affine_d, sp_item_dt2i_affine_d):
	Merge _d version with non-_d version.  Update callers.

	* src/rubberband.h, src/rubberband.cpp (sp_rubberband_start):
	Add NR::Point version.
	Implement x,y version as call to NR::Point version.

2004-01-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop-snap.h, src/desktop-snap.cpp (sp_desktop_dim_snap_list):
	Export this function.
	(sp_desktop_horizontal_snap_list, sp_desktop_vertical_snap_list):
	Remove these now-unused functions.
	* src/select-context.cpp (sp_selection_moveto):